--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   # Data packages
   dio: ^4.0.6
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -40,3 +41,4 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/images/
